--- a/TourismAppWithUsefulLibraries/core/src/main/res/layout/item_list_placeholder.xml
+++ b/TourismAppWithUsefulLibraries/core/src/main/res/layout/item_list_placeholder.xml
@@ -74,8 +74,7 @@
             app:layout_constraintBottom_toBottomOf="@id/iv_item_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_goneMarginStart="16dp" />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
